k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmos
  namespace: farmos
  labels:
    app: farmos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmos
  template:
    metadata:
      labels:
        app: farmos
    spec:
      securityContext:
        fsGroup: 33
      containers:
      - name: farmos
        image: jorblad/farmos-k8s:v4.0.7.1
        securityContext:
          runAsUser: 33
          runAsGroup: 33
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "4Gi"
            cpu: "2"
          requests:
            memory: "512Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /user/login
            port: 80
          failureThreshold: 60 # ~10 minutes (60 * 10s)
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /user/login
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - mountPath: /opt/drupal/web/sites
          name: farmos-sites-volume
        - mountPath: /opt/drupal/private
          name: farmos-private-volume
        - mountPath: /config
          name: farmos-settings-extra
      volumes:
      - name: farmos-sites-volume
        persistentVolumeClaim:
          claimName: farmos-sites-pvc
      - name: farmos-private-volume
        persistentVolumeClaim:
          claimName: farmos-private-pvc
      - name: farmos-settings-extra
        configMap:
          name: farmos-settings-extra
