k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: farmos-svc
  namespace: farmos
  labels:
    app: farmos
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.254.12
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: farmos
