k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farmos-ingress
  namespace: farmos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - host: farm.jorblad.se
    http:
      paths:
      - backend:
          service:
            name: farmos-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - farm.jorblad.se
    secretName: farm-jorblad-se-tls
